Fix spacing again

--- a/src/components/fieldset/_fieldset.scss
+++ b/src/components/fieldset/_fieldset.scss
@@ -6,6 +6,7 @@
       margin-bottom: 0.55rem;
     }
     &-title {
+      display: block;
       margin: 0;
       padding: 0 0 1.5rem;
     }
